--- a/src/main/resources/templates/forms/addClass.html
+++ b/src/main/resources/templates/forms/addClass.html
@@ -1,6 +1,6 @@
 {{>header}}
 <main class="d-flex flex-column min-vh-100">
-<link rel="stylesheet" href="/css/form.css">
+    <link rel="stylesheet" href="/css/form.css">
     <div>
         <h1>Ajustes de Administrador</h1>
     </div>
@@ -13,10 +13,9 @@
                 <label>Gimnasio:</label>
 
                 <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                    <option selected>Abre para seleccionar</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
+                    {{#gym}}
+                    <option class="{{gym.id}}">{{city}} ({{ccaa}}) | {{address}}, {{number}}, {{zip}}</option>
+                    {{/gym}}
                 </select>
 
 
@@ -31,45 +30,6 @@
                     <option value="3">Three</option>
 
                 </select>
-
-
-
-                <label >Hora:</label>
-                <input type="button" class="btn btn-light" value="Seleccionar hora" onclick="mostrarPopUp()">
-                <br><br>
-                <!--////////////////////////////////////////////////////////////////////////-->
-                <div id="popup">
-                    <table id="horario">
-                        <thead>
-                            <tr>
-                                <th></th>
-                                <th>Lunes</th>
-                                <th>Martes</th>
-                                <th>Miércoles</th>
-                                <th>Jueves</th>
-                                <th>Viernes</th>
-                                <th>Sábado</th>
-                                <th>Domingo</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <script type="text/javascript" src="horario.js"></script>
-                        </tbody>
-                    </table>
-                
-                    <button onclick="ocultarPopUp()">Cerrar</button>
-                </div>
-                <!--////////////////////////////////////////////////////////////////////////-->
-                <label >Entrenador:</label>
-                <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-
-                    <option selected>Abre para seleccionar</option>
-                    <option value="1">One</option>
-                    <option value="2">Two</option>
-                    <option value="3">Three</option>
-
-                </select>
-
                 <br><br>
 
 
