Mustache de un centro y solución errores API-REST

--- a/src/main/resources/static/css/centers.css
+++ b/src/main/resources/static/css/centers.css
@@ -67,7 +67,12 @@ ul {
 
 li {
     list-style: none;
+    transition: transform 0.2s ease-in-out;
 
+}
+li:hover {
+    transform: scale(1.02);
+    cursor: pointer;
 }
 
 .ele {
