--- a/src/main/resources/templates/center.html
+++ b/src/main/resources/templates/center.html
@@ -15,7 +15,7 @@
                 <p>Dirección:</p>
                 <p class="ubication">
                     {{gym.address}}, {{gym.number}}, {{gym.city}}({{gym.ccaa}}), {{gym.zip}} </p>
-                <p>Número de Conctacto:</p>
+                <p>Número de Contacto:</p>
                 <p>{{gym.phoneNumber}}</p>
             </div>
         </div>
@@ -58,7 +58,7 @@
 
                 <div class="course">
                     <h2>{{name}}</h2>
-                    <p>Intendidad: Nivel {{intensity}}</p>
+                    <p>Intensidad: Nivel {{intensity}}</p>
                     <p>Descripción: {{description}} </p>
                 </div>
 
