--- a/src/main/resources/templates/forms/addClass.html
+++ b/src/main/resources/templates/forms/addClass.html
@@ -34,14 +34,13 @@
 
                 <input type="submit" class="btn btn-light" value="Confirmar">
 
-                <div id="calendar"></div>
 
 
         </div>
 
     </div>
 
-    <script src="/js/addClass.js"></script>
+    <script src="/js/post/postClass.js"></script>
     <script src="prueba.js"></script>
 </main>
 {{>footer}}
