--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -48,7 +48,7 @@
             <li><a href="/centers/">Centros</a></li>
             <li><a href="/">Galería</a></li>
             <li><a href="/prices/">Precios</a></li>
-            <li><a href="/center/">Productos</a></li>
+            <li><a href="/course/">Cursos</a></li>
             <li><a href="/create-question/">Contacto</a></li>
             <li><a href="/help/">Ayuda y FAQ's</a></li>
 
@@ -63,6 +63,7 @@
                 <li><a class="dropdown-item" href="/create-Class/" >Crear clase</a></li>
                 <li><a class="dropdown-item" href="/add-Coach/" >Añadir entrenador a un gimnasio</a></li>
                 <li><a class="dropdown-item" href="/add-class-to-gym/" >Añadir clase a un gimnasio</a></li>
+                <li><a class="dropdown-item" href="/mailbox/" >Ver buzón</a></li>
             </ul>
         </div>
 
