--- a/src/main/resources/static/css/mailbox.css
+++ b/src/main/resources/static/css/mailbox.css
@@ -54,12 +54,12 @@ ul {
 }
 
 /* ////////////////////////////////////////////////////////// */
-.gyms {
+.questionsDiv {
     width: 50%;
     align-items: center
 }
 
-.gym {
+.question {
     color: black;
     margin: 0 0 0 20px;
     font-family: 'Montserrat', sans-serif;
@@ -70,11 +70,6 @@ li {
     transition: transform 0.2s ease-in-out;
 
 }
-li:hover {
-    transform: scale(1.02);
-    cursor: pointer;
-}
-
 .ele {
     background-color: #212529;
     border-radius: 10px;
@@ -87,10 +82,10 @@ li:hover {
 
 }
 
-.gymImagen {
+.mailImagen {
 
-    flex-shrink: 0;
-    /*padding: 10px;*/
+    flex-grow: 1;
+    padding: 10px;
     border-radius: 10px;
 
     width: 10%;
@@ -112,7 +107,7 @@ li:hover {
 .ciudad {
 
     padding: 20px;
-    flex: 1;
+    flex-grow: 1;
 
 }
 
