--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -61,7 +61,7 @@
 
     <script src="/js/clickToGym.js"></script>
 
-    <script src="/js/delete.js"></script>
+    <script src="/js/delete/deleteGym.js"></script>
     <script src="/js/centers.js"></script>
 </main>
 {{>footer}}
