--- a/src/main/resources/templates/forms/contact.html
+++ b/src/main/resources/templates/forms/contact.html
@@ -8,7 +8,7 @@
     <div class="contenedor">
 
         <div class="form">
-            <form action="/contact/" method="post">
+            <form action="/contact/" method="post" accept-charset="UTF-8">
                 <h2>Enviar una solicitud</h2>
 
                 <label>Correo electrónico:</label>
@@ -28,10 +28,7 @@
                 <div class="mb-3">
                     <label for="exampleFormControlSelect1" class="form-label">Tipo de Consulta:</label>
                     <select id="typeQuestion" name="typeQuestion" class="form-select" id="exampleFormControlSelect1">
-                        <option>Comentarios</option>
-                        <option>Más información</option>
-                        <option>Dudas sobre tu contrato</option>
-                        <option>Otros</option>
+
                     </select>
                 </div>
 
@@ -43,4 +40,5 @@
 
     </div>
 </main>
+<script src="/js/typeQuestion.js" charset="UTF-8"></script>
 {{>footer}}
