--- a/src/main/resources/templates/forms/editGym.html
+++ b/src/main/resources/templates/forms/editGym.html
@@ -68,7 +68,7 @@
     </div>
 
 </main>
-<script src="/js/put.js" charset="UTF-8"></script>
+<script src="/js/put/putGym.js" charset="UTF-8"></script>
 
 
 {{>footer}}
