Formularios DELETE y PUT con JS

--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -39,5 +39,6 @@
             {{/courses}}
         </ul>
     </section>
+    <script src="/js/delete/deleteClass.js"></script>
 </main>
 {{>footer}}
