--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -46,9 +46,9 @@
 
             <li><a href="/">Inicio</a></li>
             <li><a href="/centers/">Centros</a></li>
-            <li><a href="/">Galería</a></li>
             <li><a href="/prices/">Precios</a></li>
             <li><a href="/course/">Cursos</a></li>
+            <li><a href="/coaches/">Personal</a></li>
             <li><a href="/create-question/">Contacto</a></li>
             <li><a href="/help/">Ayuda y FAQ's</a></li>
 
