--- a/src/main/resources/templates/centers.html
+++ b/src/main/resources/templates/centers.html
@@ -62,6 +62,6 @@
     <script src="/js/clickToGym.js"></script>
 
     <script src="/js/delete/deleteGym.js"></script>
-    <script src="/js/centers.js"></script>
+    <script src="/js/filters/centers.js"></script>
 </main>
 {{>footer}}
