--- a/src/main/resources/templates/mailbox.html
+++ b/src/main/resources/templates/mailbox.html
@@ -54,7 +54,7 @@
 
 
     <script src="/js/delete/deleteQuestion.js"></script>
-    <script src="/js/mailbox.js" charset="UTF-8"></script>
+    <script src="/js/filters/mailbox.js" charset="UTF-8"></script>
 </main>
 <script src="/js/typeQuestion.js" charset="UTF-8"></script>
 {{>footer}}
