--- a/src/main/resources/templates/coaches.html
+++ b/src/main/resources/templates/coaches.html
@@ -23,7 +23,7 @@
         <div class="coaches">
 
 
-            <h2 class="coach">Entrenadores</h2>
+            <h2 class="coach">ENTRENADORES</h2>
             <ul id="list">
                 {{#coaches}}
                 <li data-id="{{id}}" class="{{gymId}}">
@@ -35,7 +35,7 @@
 
                         <div class="person">
                             <div class="buttonAndTittle">
-                                <h2>IDENTIFICADOR: {{id}}</h2>
+                                <h2>ID ENTRENADOR: {{id}}</h2>
                                 <div class="buttons">
                                     <a href="#" class="btn btn-danger" data-id="{{id}}">Eliminar</a>
                                 </div>
