--- a/src/main/resources/templates/forms/addClass.html
+++ b/src/main/resources/templates/forms/addClass.html
@@ -18,8 +18,6 @@
                     {{/gym}}
                 </select>
 
-
-
                 <label>Clase:</label>
 
                 <select id="mySelectCourse" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
@@ -41,6 +39,6 @@
     </div>
 
     <script src="/js/post/postClass.js"></script>
-    <script src="prueba.js"></script>
+<!--    <script src="prueba.js"></script>-->
 </main>
 {{>footer}}
