--- a/src/main/resources/templates/forms/createClass.html
+++ b/src/main/resources/templates/forms/createClass.html
@@ -12,20 +12,20 @@
         <h2>Crear nueva clase</h2>
 
         <label>Nombre:</label>
-        <input type="text" id="name" name="name" class="form-control" placeholder="Nombre" aria-label="First name">
+        <input type="text" id="name" name="name" class="form-control" placeholder="Nombre" aria-label="First name" required>
         <br><br>
 
         <label for="customRange3" class="form-label">Intensidad:</label>
-        <input type="range" id="intensity" name="intensity" class="form-range" min="0" max="5" step="1" value="2" id="customRange3">
+        <input type="range" id="intensity" name="intensity" class="form-range" min="0" max="5" step="1" value="2" id="customRange3" required>
         <br><br>
 
         <div class="form-group">
           <label for="description">Descripción:</label>
-          <textarea class="form-control" id="description" name="description" rows="4" placeholder="Descripción aquí..."></textarea>
+          <textarea class="form-control" id="description" name="description" rows="4" placeholder="Descripción aquí..." required ></textarea >
         </div>
         <br><br>
 
-        <input type="submit" class="btn btn-light" value="Confirmar">
+        <input type="submit" class="btn btn-light" value="Confirmar" required>
 
       </form>
 
