--- a/src/main/resources/templates/forms/createGym.html
+++ b/src/main/resources/templates/forms/createGym.html
@@ -16,49 +16,49 @@
 
                     <div class="col">
                         <label class="form-label">Dirección</label>
-                        <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán">
+                        <input type="text" class="form-control" id="address" name="address" placeholder="C. Tulipán" required>
                     </div>
 
                     <div class="col">
                         <label class="form-label">Nº</label>
-                        <input type="text" class="form-control" id="number"  name="number" placeholder="20">
+                        <input type="text" class="form-control" id="number"  name="number" placeholder="20" required>
                     </div>
 
                     <div class="col">
                         <label class="form-label">Código Postal</label>
-                        <input type="text" class="form-control" id="zip" name="zip" placeholder="28933">
+                        <input type="text" class="form-control" id="zip" name="zip" placeholder="28933" required>
                     </div>
 
                 </div>
 
                 <label  class="form-label">Comunidad Autónoma</label>
-                <select id="ccaa" name="ccaa" class="form-select" >
+                <select id="ccaa" name="ccaa" class="form-select" required>
 
                 </select>
 
                 <label class="form-label">Ciudad</label>
-                <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad">
+                <input type="text" class="form-control" id="city" name="city" placeholder="Ciudad" required>
 
 
                 <label class="form-label">Número de contacto</label>
-                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393">
+                <input type="text" class="form-control" id="phoneNumber" name="phoneNumber" placeholder="914889393" required>
 
 
                 <h3>Datos del gerente</h3>
                 <div class="row">
                     <div class="col">
                         <label>Nombre:</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" aria-label="First name">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Nombre" aria-label="First name" required>
                     </div>
                     <div class="col">
                         <label>Apellidos:</label>
-                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos" aria-label="Last name">
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Apellidos" aria-label="Last name" required>
                     </div>
                 </div>
 
                 <br><br>
 
-                <input type="submit" class="btn btn-light" value="Confirmar">
+                <input type="submit" class="btn btn-light" value="Confirmar" required>
 
             </form>
 
